added css file and images file

--- a/UI/index.html
+++ b/UI/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Jeremiah Oyebamiji"> 
-    <title>Politico | userSignUp</title>
+    <title>Politico | Home</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -42,6 +42,33 @@
         </div>
     </header>
 
+    <section id="login-section">
+        <div class="loginBox">
+            <h2>Login</h2>
+            <form action="#">
+              <p>Email</p>
+              <input type="text" name="" placeholder="Enter Email">
+              <p>Password</p>
+              <input type="text" name="" placeholder=".......">
+              <input type="submit" name="" value="Sign In">
+              <a href="#">Forgot Password</a>
+            </form>
+          </div>
+    </section>
+
+    <section id="main">
+        <div class="container">
+            <article id="main-col">
+                <h1 class="page-title">News Feed</h1>
+                <p>Nunc felis diam, finibus et sollicitudin a, pellentesque vel sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed pretium ipsum id eros laoreet lobortis. Morbi vitae placerat enim. Sed a dui ac diam rhoncus dignissim. Cras luctus erat vel magna tempus, vitae consectetur felis auctor. Aliquam dapibus ipsum arcu, ut semper odio efficitur a. Phasellus a imperdiet nulla, convallis euismod tortor.</p>
+            </article>
+            <aside id="sidebar">
+                <div class="dark">
+                        <a class="twitter-timeline" href="https://twitter.com/Politico20191?ref_src=twsrc%5Etfw">Tweets by Politico20191</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+            </aside>
+        </div>
+    </section>
 
     <footer>
         <p>Politico Copyright &copy; 2019</p>
