correction made on signup botton password reset link graphics

--- a/UI/index.html
+++ b/UI/index.html
@@ -47,26 +47,32 @@
             <h2>Login</h2>
             <form action="#">
               <p>Email</p>
-              <input type="text" name="" placeholder="Enter Email">
+              <input type="email" name="" placeholder="Enter Email">
               <p>Password</p>
-              <input type="text" name="" placeholder=".......">
-              <input type="submit" name="" value="Sign In">
-              <a href="#">Forgot Password</a>
+              <input type="password" name="" placeholder=".......">
+              <button class="log-btn"><a href="userprofile.html">Sign In</a></button>
+              <h5>Forgot password, click <a href="passwordreset.html"> here</a></h5> 
             </form>
           </div>
     </section>
 
-    <section id="main">
+    <section id="details">
         <div class="container">
-            <article id="main-col">
-                <h1 class="page-title">News Feed</h1>
-                <p>Nunc felis diam, finibus et sollicitudin a, pellentesque vel sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed pretium ipsum id eros laoreet lobortis. Morbi vitae placerat enim. Sed a dui ac diam rhoncus dignissim. Cras luctus erat vel magna tempus, vitae consectetur felis auctor. Aliquam dapibus ipsum arcu, ut semper odio efficitur a. Phasellus a imperdiet nulla, convallis euismod tortor.</p>
-            </article>
-            <aside id="sidebar">
-                <div class="dark">
-                        <a class="twitter-timeline" href="https://twitter.com/Politico20191?ref_src=twsrc%5Etfw">Tweets by Politico20191</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-            </aside>
+            <div class="details-1">
+                <img src="./img/yes-we-can.jpeg" alt="Yes We Can">
+                <h3>Yes We Can</h3>
+                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+            </div>
+            <div class="details-1">
+                <img src="./img/yourvote.jpg" alt="Electronic Voting">
+                <h3>Electronic Voting</h3>
+                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+            </div>
+            <div class="details-1">
+                <img src="./img/worldwide.jpg" alt="Wide Coverage">
+                <h3>Wide Coverage</h3>
+                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+            </div>
         </div>
     </section>
 
