--- a/UI/userSignUp.html
+++ b/UI/userSignUp.html
@@ -17,26 +17,8 @@
             <nav>
                 <ul class="ul-container">
                     <li class="active-1"><a href="index.html">Home</a></li>
-                    <li class="header-tm">
-                        <div class="dropdown">
-                            <span class="dropbtn">Sign Up 
-                            </span>
-                          <div class="dropdown-content">
-                            <a href="userSignUp.html">User</a>
-                            <a href="candidateSingUp.html">Candidate</a>
-                          </div>
-                        </div> 
-                    </li>
-                    <li>
-                        <div class="dropdown">
-                            <span class="dropbtn">Electoral</span>
-                          <div class="dropdown-content">
-                            <a href="politicaloffices.html">Political Offices</a>
-                            <a href="politicalparties.html">Political Parties</a>
-                            <a href="vote.html">VOTE</a>
-                          </div>
-                        </div> 
-                    </li>
+                    <li class="header-tm"><a href="usersignup.html">Sign Up</a></li>
+                    <li class="active-1"><a href="admin.html">Electoral</a></li>
                 </ul>
             </nav>
         </div>
