--- a/UI/index.html
+++ b/UI/index.html
@@ -43,17 +43,17 @@
             <div class="details-1">
                 <img src="./img/yes-we-can.jpeg" alt="Yes We Can">
                 <h3>Yes We Can</h3>
-                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+                <p>Let your voice be heard! Always vote for principle</p>
             </div>
             <div class="details-1">
                 <img src="./img/yourvote.jpg" alt="Electronic Voting">
                 <h3>Electronic Voting</h3>
-                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+                <p>Everywhere you go, we get you voting.</p>
             </div>
             <div class="details-1">
                 <img src="./img/worldwide.jpg" alt="Wide Coverage">
                 <h3>Wide Coverage</h3>
-                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+                <p>Distance is not a barrier, give your mandate!</p>
             </div>
         </div>
     </section>
