ft(setup endpoints): installed express installed babel installed babel-cli installed body-parser installed mocha installed chai implemented endpoints implemented dommy database

--- a/UI/index.html
+++ b/UI/index.html
@@ -43,17 +43,18 @@
             <div class="details-1">
                 <img src="./img/yes-we-can.jpeg" alt="Yes We Can">
                 <h3>Yes We Can</h3>
-                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+                <p>We know the battle ahead will be long, but always remember that no matter what obstacles stand in our way, nothing can stand in the way of the power of millions of voices calling for change.</p>
             </div>
             <div class="details-1">
                 <img src="./img/yourvote.jpg" alt="Electronic Voting">
                 <h3>Electronic Voting</h3>
-                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+                <p>The ignorance of one voter in a democracy impairs the security of all. The future of this republic is in the hands of the Nigerian voter.</p>
+                <p>Your Vote Counts!!!</p>
             </div>
             <div class="details-1">
                 <img src="./img/worldwide.jpg" alt="Wide Coverage">
                 <h3>Wide Coverage</h3>
-                <p>Maecenas eu efficitur nisi. Proin a lacus a risus consequat dictum.</p>
+                <p>The Internet is a worldwide platform for sharing information. It is a community of common interests. We get you covered anywhere you are!</p>
             </div>
         </div>
     </section>
